# pav

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  _RocqProject  client_specs.txt  demo_keys  go.mod  go.sum  goose.toml  justfile  pav-proof.opam  todo.md
.claude/: settings.json  settings.local.json
.github/: commit-emails.toml  dependabot.yml
advrpc/: advrpc.go  advrpc_test.go
alicebob/: alicebob.go  alicebob_test.go  helpers.go  history.go
auditor/: auditor.go  rpc.go  serde.go  serde.out.go
auth_log/: auth_log.go  kt.go
bench/: bench_test.go
benchutil/: benchutil.go
chat4/: encoding.go  ffi.go  prot.go
chatGrpc/: chat.pb.go  chat.proto  chat_grpc.pb.go
client/: client.go  evidence.go  main.go  prompt.go
cryptoFFI/: main.go  main_test.go
cryptoHelper/: main.go  main_test.go
cryptoHelpers/: main.go  main_test.go
cryptoShim/: main.go
crypto_ffi/: adequacy.v  crypto_ffi.v  impl.v
cryptoffi/: bench_test.go  cryptoffi.go  cryptoffi_model.go  cryptoffi_test.go
cryptoutil/: cryptoutil.go  cryptoutil_test.go  main.go  main_test.go
data/: 25-01-16-pav-akd-seeded-merkle.txt  25-01-27-get-prove-put.txt  25-02-04-hash.txt  25-02-11-rand.txt  25-02-11-vrf.txt  25-02-12-vrf-opt.txt  25-02-17-serv.txt  25-02-18-get-scale.txt  25-02-18-size.txt  25-02-18-storage.txt  25-02-19-cli.txt  25-02-19-selfmon-scale.txt  25-02-19-serv-scale.txt  25-02-20-put-scale.txt  25-02-28-one-akd.txt  25-02-28-one-pav.txt  25-02-28-size-akd.txt  25-02-28-size-pav.txt  25-02-28-verify-akd.txt  25-02-28-verify-pav.txt  25-03-03-cli-pav.txt  25-03-05-vrf.txt  25-03-06-gen-ver.txt  audit-scale.txt  fig-get-vers.py  gen-ver.txt  merkle.txt  vrf.txt
etc/: ci-check.py  filter-benchtest.py  plot-get-scale.py  plot-put-scale.py  plot-selfmon-scale.py  run-bench.py  run-rocq-mcp.sh  update-goose.sh
full/: app.go  encoding.go  lib.go
full2/: app.go  clerk.go  encoding.go  server.go
full3/: clerk.go  main.go  shared.go
genKeys/: main.go
hashchain/: hashchain.go  hashchain_test.go
kt/: auditor.go  (+19 more)
proof/: .mcp.json  Makefile  advrpc.v  cryptoffi.v  cryptoutil.v  go.sum  hashchain.v  ktcore.v  netffi.v  pav-proof.opam  prelude.v  safemarshal.v
proof/.claude/: settings.json
proof/.claude/skills/find-lemmas/: SKILL.md
proof/.claude/skills/rocq-build/: SKILL.md
proof/.claude/skills/rocq-style/: SKILL.md
proof/auditor_proof/: auditor.v  base.v  rpc.v  serde.v
proof/client_proof/: base.v  client.v  rpc.v
proof/code/github_com/sanjit_bhat/pav/: advrpc.v  alicebob.v  auditor.v  client.v  cryptoffi.v.toml  cryptoutil.v  hashchain.v  ktcore.v  safemarshal.v  server.v
proof/code/github_com/sanjit_bhat/pav/cryptoffi/: ffi.v  ffi.v.toml
proof/crypto_ffi/: adequacy.v  crypto_ffi.v
proof/experiments/: genie_equiv.v  hash_proph.v
proof/generatedproof/github_com/sanjit_bhat/pav/: alicebob.v  auditor.v  client.v  cryptoffi.v  cryptoutil.v  hashchain.v  ktcore.v  server.v
proof/ktcore_proof/: agree.v  base.v  blame.v  common.v  evidence.v  key_map.v  ktcore.v  serde.v  sigpred.v  staged_keys.v
proof/merkle_proof/: base.v  code.v  serde.v  theory.v
proof/proof/: advrpc.v  alicebob.v  auditor.v  client.v  cryptoffi.v  cryptoutil.v  hashchain.v  ktcore.v  merkle.v  netffi.v  prelude.v  safemarshal.v
proof/proof/auditor_proof/: auditor.v  rpc.v  rpc_serv.v  serde.v
proof/proof/client_proof/: base.v  client.v  rpc.v  rpc_serv.v
proof/proof/cryptoffi/: ffi.v
proof/proof/experiments/: hash_proph.v
proof/proof/helpers/: iris.v  stdpp.v
proof/proof/ktcore_proof/: agree.v  base.v  blame.v  evidence.v  key_map.v  ktcore.v  serde.v  sigpred.v  staged_keys.v
proof/proof/merkle_proof/: base.v  code.v  serde.v  theory.v
proof/proof/server_proof/: base.v  rpc.v  serde.v  server.v
proof/server_proof/: base.v  rpc.v  serde.v  server.v
proof/trusted_code/cryptoffi/: ffi.v
(+206 files in other folders)
