opam-version: "2.0"
license: "MIT"
maintainer: "Sanjit Bhat"
authors: "Sanjit Bhat"
homepage: "https://github.com/sanjit-bhat/pav-proof"
bug-reports: "https://github.com/sanjit-bhat/pav-proof/issues"
dev-repo: "git+https://github.com/sanjit-bhat/pav-proof.git"
version: "dev"
synopsis: "Program proofs for pav"

depends: [
  "perennial"
]

pin-depends: [
  ["perennial.dev"             "git+https://github.com/mit-pdos/perennial#b96ab47d46a10ebbc08660adc2c4a89d31732259"]

  ## begin indirect
  ["coq-coqutil.dev"           "git+https://github.com/mit-plv/coqutil#6644c132300a4da5fb1a4ce5c3860f60c135b2fa"]
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b2645210331c3ec4ed75fa5ad0840a723f25151"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#c388714a93b1c043ed42a3f446280abd5113d26f"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#b641d1560959d4f3052d84daaac4047c99416c4c"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#0989202c46f352854feb5f96b6c3a1f4f91f886a"]
  ## end
]

build: [make "-j%{jobs}%"]
install: ["go" "tool" "perennial-cli" "install"]
build-env: [
  [GOCACHE = "%{build}%/_build/.gocache"]
]
