opam-version: "2.0"
license: "MIT"
maintainer: "Sanjit Bhat"
authors: "Sanjit Bhat"
homepage: "https://github.com/sanjit-bhat/pav-proof"
bug-reports: "https://github.com/sanjit-bhat/pav-proof/issues"
dev-repo: "git+https://github.com/sanjit-bhat/pav-proof.git"
version: "dev"
synopsis: "Program proofs for pav"

depends: [
  "perennial"
]

pin-depends: [
  ["perennial.dev"             "git+https://github.com/mit-pdos/perennial#ec1ccd9152d6cc4bb8bc085b6eb1445db4cdf7d1"]

  ## begin indirect
  ["coq-coqutil.dev"           "git+https://github.com/mit-plv/coqutil#ef21519589dc5397cfad5466619284fd5d2cc5e0"]
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b2645210331c3ec4ed75fa5ad0840a723f25151"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#ca663d2709888a789a03edc861b7bde86ddd56e5"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#55a5f09b0f5e983c434d90ee6f0fd3e1324755d1"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#49365266f83529860a416c3152bda47989496f1b"]
  ## end
]

build: [make "-j%{jobs}%"]
install: ["go" "tool" "perennial-cli" "install"]
build-env: [
  [GOCACHE = "%{build}%/_build/.gocache"]
]
