opam-version: "2.0"
license: "MIT"
maintainer: "Sanjit Bhat"
authors: "Sanjit Bhat"
homepage: "https://github.com/sanjit-bhat/pav-proof"
bug-reports: "https://github.com/sanjit-bhat/pav-proof/issues"
dev-repo: "git+https://github.com/sanjit-bhat/pav-proof.git"
version: "dev"
synopsis: "Program proofs for pav"

depends: [
  "perennial"
]

pin-depends: [
  ["perennial.dev"             "git+https://github.com/mit-pdos/perennial#6520480459d47b236639628a49bed2246d95784f"]

  ## begin indirect
  ["coq-coqutil.dev"           "git+https://github.com/mit-plv/coqutil#ef21519589dc5397cfad5466619284fd5d2cc5e0"]
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b2645210331c3ec4ed75fa5ad0840a723f25151"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#ca663d2709888a789a03edc861b7bde86ddd56e5"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#1e6e3a57d8ad52b880633cc69c979ff7e65d6fbc"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#6151984a1e2770649858f9d578023ffc1b337421"]
  ## end
]

build: [make "-j%{jobs}%"]
install: ["go" "tool" "perennial-cli" "install"]
build-env: [
  [GOCACHE = "%{build}%/_build/.gocache"]
]
